Hide overflow x on body element to prevent horizontal scroll bar appearance

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 a {
